[iOS 15 Regression]: scroll position resets when using scroll snap https://bugs.webkit.org/show_bug.cgi?id=226816 <rdar://problem/79081301>

Patch by Martin Robinson <mrobinson@igalia.com> on 2021-06-23
Reviewed by Simon Fraser.

Source/WebKit:

To improve scrolling fluidity on iOS, have any sort of momentum scroll trigger directional
scroll snapping. This means that any momentum scroll will move to the next or previous scroll
position and not snap back. This improves behavior on tesla.com and also on the scroll
snapping demo on the WebKit page.

Tests: fast/scrolling/ios/scroll-snap-with-momentum-scroll-in-main-frame.html
       fast/scrolling/ios/scroll-snap-with-momentum-scroll-in-overflow-scroll-area.html

* UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView scrollViewWillEndDragging:withVelocity:targetContentOffset:]): Pass the current scroll offset to
the RemoteScrollingCoordinatorProxy. Passing a value for this offset is the trigger for directional scroll
snapping.
* UIProcess/RemoteLayerTree/RemoteScrollingCoordinatorProxy.h: Update method definitions.
* UIProcess/RemoteLayerTree/ios/RemoteScrollingCoordinatorProxyIOS.mm:
(WebKit::RemoteScrollingCoordinatorProxy::adjustTargetContentOffsetForSnapping): Pass the current offset.
(WebKit::RemoteScrollingCoordinatorProxy::closestSnapOffsetForMainFrameScrolling const): Ditto.
* UIProcess/RemoteLayerTree/ios/ScrollingTreeScrollingNodeDelegateIOS.mm:
(-[WKScrollingNodeScrollViewDelegate scrollViewWillEndDragging:withVelocity:targetContentOffset:]): Enable
directional scroll snapping for RenderLayers.

LayoutTests:

* fast/scrolling/ios/scroll-snap-with-momentum-scroll-in-main-frame-expected.txt: Added.
* fast/scrolling/ios/scroll-snap-with-momentum-scroll-in-main-frame.html: Added.
* fast/scrolling/ios/scroll-snap-with-momentum-scroll-in-overflow-scroll-area-expected.txt: Added.
* fast/scrolling/ios/scroll-snap-with-momentum-scroll-in-overflow-scroll-area.html: Added.

Canonical link: https://commits.webkit.org/239085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279195 268f45cc-cd09-0410-ab3c-d52691b4dbfc